fixes bookshelf detail and edits pages on mobile

--- a/src/components/EditBookshelfForm/EditBookshelfForm.css
+++ b/src/components/EditBookshelfForm/EditBookshelfForm.css
@@ -1,6 +1,14 @@
-.edit-bookshelf-form textarea {
-    height: auto;
+.edit-bookshelf-form form {
+    text-align: left;
+    margin: 20px 75px;
 }
-.edit-bookshelf-form input, .edit-bookshelf-form button {
-    margin: 20px 30px;
+.edit-bookshelf-form textarea {
+    height: 6em;
+}
+
+@media screen and (min-width: 850px) {
+    .edit-bookshelf-form textarea {
+        height: 6em;
+        width: 50vw;
+    }
 }
