--- a/src/pages/BookshelfDetailPage/BookshelfDetailPage.css
+++ b/src/pages/BookshelfDetailPage/BookshelfDetailPage.css
@@ -7,8 +7,15 @@
 }
 .bookshelf-detail-page .bookshelf-info {
     text-align: left;
-    margin: 0 0 75px 200px;
+    margin: 20px 30px;
 }
-.bookshelf-detail-page button{
-    margin: 20px 20px 30px 0;
+.bookshelf-detail-page .button-primary{
+    margin-right: 15px;
+}
+
+@media screen and (min-width: 850px) {
+    .bookshelf-detail-page .bookshelf-info {
+        margin: 0 0 75px 75px;
+
+    }
 }
